更新通用基础
将通用基础导航下的计算机基础、编程语言、工具、构建工具、测试框架与安全路线统一为独立的站点化学习地图，补齐常用、边界与深层知识。

Constraint: 保留现有路线入口与相邻分类的导航关系
Rejected: 只修改新增的构建工具、测试和安全文档 | 会让同一导航下的路线风格与深度继续分裂
Confidence: high
Scope-risk: moderate
Reversibility: clean
Directive: 后续新增通用基础路线应延续每站引入、知识点解释、常用/少见/深度覆盖和拟人化表达
Tested: npm run build; 31 个目标文件残留检查; git diff --check
Not-tested: 未逐页进行浏览器人工视觉审阅